--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English literature -- Early modern, 1500-1700'
+- GITenberg
 tableOfContents: Reply to Gosson, by T. Lodge -- Pap with a hatchet, by J. Lyly (?)
   -- A pretty and witty discourse, by N. Breton -- Groat's worth of wit, by R. Greene
   -- Precursor to Pierce's Supererogation, by G. Harvey -- Prognostication, by T.
